--- a/projectFull/assets/css/style.css
+++ b/projectFull/assets/css/style.css
@@ -376,45 +376,50 @@ header .container_small .title h4 a:hover {
   CONTENT RESULT
   ================================
 */
-.content_result .container_small .title {
+#content_result.--hidden {
+  display: none;
+}
+#content_result .container_small .title {
   background: url("../images/icons/pick.png") no-repeat left 40px;
   padding-top: 130px;
   padding-bottom: 40px;
 }
-.content_result .container_small .title h2 {
+#content_result .container_small .title h2 {
   color: #000;
 }
-.content_result .container_small .display {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 25px 30px;
+#content_result .container_small .display {
+  display: grid;
+  grid-template-columns: 437px 206px 206px;
+  grid-gap: 25px;
 }
-.content_result .container_small .display .__item {
+#content_result .container_small .display .__item {
   width: 205px;
   height: 245px;
   background-color: #fff;
   border-radius: 10px;
   position: relative;
+  transition: all 0.5s;
 }
-.content_result .container_small .display .__item .image {
+#content_result .container_small .display .__item:hover {
+  filter: brightness(0.95);
+}
+#content_result .container_small .display .__item .image {
   width: 100%;
   height: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.content_result .container_small .display .__item .image img {
+#content_result .container_small .display .__item .image img {
   width: 55%;
 }
-.content_result .container_small .display .__item h3 {
-  line-height: 30px;
+#content_result .container_small .display .__item h3 {
+  line-height: 15px;
   font-size: 1.25rem;
   padding-left: 20px;
   margin-bottom: 0;
 }
-.content_result .container_small .display .__item .informations {
+#content_result .container_small .display .__item .informations {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -422,49 +427,50 @@ header .container_small .title h4 a:hover {
   padding-left: 20px;
   padding-right: 20px;
 }
-.content_result .container_small .display .__item .informations .price span {
+#content_result .container_small .display .__item .informations .price span {
   color: #1E6B4E;
   font-size: 1.25rem;
   font-weight: 600;
 }
-.content_result .container_small .display .__item .informations .details {
+#content_result .container_small .display .__item .informations .details {
   display: flex;
   justify-content: end;
 }
-.content_result .container_small .display .__item .informations .details .toxicity, .content_result .container_small .display .__item .informations .details .sun, .content_result .container_small .display .__item .informations .details .water {
+#content_result .container_small .display .__item .informations .details .toxicity, #content_result .container_small .display .__item .informations .details .sun, #content_result .container_small .display .__item .informations .details .water {
   display: flex;
   width: 30px;
   height: 30px;
 }
-.content_result .container_small .display .__item .informations .details .toxicity.--yes {
+#content_result .container_small .display .__item .informations .details .toxicity.--true {
   background: url("../images/icons/toxicity_yes.png") no-repeat center center;
 }
-.content_result .container_small .display .__item .informations .details .toxicity.--no {
+#content_result .container_small .display .__item .informations .details .toxicity.--false {
   background: url("../images/icons/toxicity_no.png") no-repeat center center;
 }
-.content_result .container_small .display .__item .informations .details .sun.--high {
+#content_result .container_small .display .__item .informations .details .sun.--high {
   background: url("../images/icons/sun_high.png") no-repeat center center;
 }
-.content_result .container_small .display .__item .informations .details .sun.--low {
+#content_result .container_small .display .__item .informations .details .sun.--low {
   background: url("../images/icons/sun_low.png") no-repeat center center;
 }
-.content_result .container_small .display .__item .informations .details .sun.--no {
+#content_result .container_small .display .__item .informations .details .sun.--no {
   background: url("../images/icons/sun_no.png") no-repeat center center;
 }
-.content_result .container_small .display .__item .informations .details .water.--ever {
+#content_result .container_small .display .__item .informations .details .water.--daily {
   background: url("../images/icons/water_one.png") no-repeat center center;
 }
-.content_result .container_small .display .__item .informations .details .water.--regulary {
+#content_result .container_small .display .__item .informations .details .water.--regularly {
   background: url("../images/icons/water_two.png") no-repeat center center;
 }
-.content_result .container_small .display .__item .informations .details .water.--rarely {
+#content_result .container_small .display .__item .informations .details .water.--rarely {
   background: url("../images/icons/water_three.png") no-repeat center center;
 }
-.content_result .container_small .display .__item.--favorite {
+#content_result .container_small .display .__item.--favorite {
   width: 440px;
   height: 510px;
+  grid-row: 1/3;
 }
-.content_result .container_small .display .__item.--favorite::after {
+#content_result .container_small .display .__item.--favorite::after {
   content: "Staff favorite";
   width: 185px;
   background: #75bc97 url("../images/icons/favorite.png") no-repeat 2px center;
@@ -480,23 +486,23 @@ header .container_small .title h4 a:hover {
   padding-bottom: 10px;
   padding-left: 30px;
 }
-.content_result .container_small .display .__item.--favorite .image img {
+#content_result .container_small .display .__item.--favorite .image img {
   width: auto;
 }
-.content_result .container_small .display .__item.--favorite h3 {
+#content_result .container_small .display .__item.--favorite h3 {
   max-width: 250px;
   line-height: 50px;
   font-size: 2.8125rem;
 }
-.content_result .container_small .display .__item.--favorite .informations {
+#content_result .container_small .display .__item.--favorite .informations {
   width: 180px;
   position: absolute;
+  flex-direction: column;
+  align-items: flex-end;
   right: 0;
   bottom: 60px;
 }
-.content_result .container_small .display .__item.--favorite .informations .price span {
-  display: flex;
-  justify-content: end;
+#content_result .container_small .display .__item.--favorite .informations .price span {
   font-size: 1.875rem;
 }
 
@@ -569,24 +575,24 @@ header .container_small .title h4 a:hover {
   NOT FOUND
   ================================
 */
-.not_found.--hidden {
+#not_found.--hidden {
   display: none;
 }
-.not_found .container_small {
+#not_found .container_small {
   height: 350px;
   display: flex;
   align-items: center;
   background: url("../images/icons/clip.png") no-repeat right 60px center;
   animation: not-found 4s;
 }
-.not_found .container_small .txt h2, .not_found .container_small .txt p {
+#not_found .container_small .txt h2, #not_found .container_small .txt p {
   color: #A9A9A9;
   transition: all 0.5s;
 }
-.not_found .container_small .txt h2:hover, .not_found .container_small .txt p:hover {
+#not_found .container_small .txt h2:hover, #not_found .container_small .txt p:hover {
   color: #1E6B4E;
 }
-.not_found .container_small .txt p {
+#not_found .container_small .txt p {
   max-width: 270px;
   font-size: 1.125rem;
 }
