--- a/Calculator/assets/css/2-layouts/_calculator.scss
+++ b/Calculator/assets/css/2-layouts/_calculator.scss
@@ -11,7 +11,7 @@
     width: 100%;
     max-width: 400px;
     height: 70vh;
-    margin: 15% auto;
+    margin: 140px auto;
     border-radius: 15px;
     background-color: main.$ColorZero;
 
