--- a/Calculator/assets/css/style.css
+++ b/Calculator/assets/css/style.css
@@ -116,7 +116,7 @@ body {
   width: 100%;
   max-width: 400px;
   height: 70vh;
-  margin: 15% auto;
+  margin: 140px auto;
   border-radius: 15px;
   background-color: #ffffff;
 }
