--- a/LayoutModern/assets/css/2-layouts/_home.scss
+++ b/LayoutModern/assets/css/2-layouts/_home.scss
@@ -7,6 +7,23 @@
   ================================
 */
 
+.scroll_nav {
+  width: 100%;
+  height: 5px;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 111;
+
+  & .progress_nav {
+    width: 0%;
+    height: inherit;
+    border-radius: 0 10px 10px 0;
+    background-color: rgb(128, 126, 126);
+  }
+}
+
 .home {
   background: url("../img/home/background-home-desktop.jpg") no-repeat;
   background-size: cover;
