--- a/LayoutModern/assets/css/style.css
+++ b/LayoutModern/assets/css/style.css
@@ -991,6 +991,22 @@ header .__menu nav ul a:hover {
   HOME
   ================================
 */
+.scroll_nav {
+  width: 100%;
+  height: 5px;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 111;
+}
+.scroll_nav .progress_nav {
+  width: 0%;
+  height: inherit;
+  border-radius: 0 10px 10px 0;
+  background-color: rgb(128, 126, 126);
+}
+
 .home {
   background: url("../img/home/background-home-desktop.jpg") no-repeat;
   background-size: cover;
